# xenocomm_sdk

./: .clang-format-ignore  .clang-tidy  .clangd  .env.example  .gitignore  .mcp.json  CMakeLists.txt  CONTRIBUTING.md  LEGACY.md  LICENSE  README.md  setup_xenocomm_mcp.sh
.github/workflows/: ci.yml  memory-tests.yml
bindings/python/: CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
bindings/python/docs/source/: conf.py  index.rst
bindings/python/examples/: basic_usage.py
bindings/python/src/: bindings.cpp  capability_signaler.cpp  connection_manager.cpp  data_transcoder.cpp  feedback_loop.cpp  transmission_manager.cpp  type_converters.cpp  type_converters.hpp
bindings/python/tests/: MEMORY_TESTING.md  conftest.py  memory_test.py  run_valgrind_tests.sh  test_capability_signaler.py  test_connection_manager.py  test_data_transcoder.py  test_feedback_loop.py
bindings/python/tests/unit/: test_cache_manager.py  test_connection_manager.py  test_negotiation_protocol.py  test_rate_limiter.py  test_rest_adapter.py  test_translation_service.py  test_transmission_manager.py
bindings/python/xenocomm/: __init__.py  api_adapter.py  authentication_manager.py  boundary_gateway.py  cache_manager.py  credential_store.py  exceptions.py  graphql_adapter.py  rest_adapter.py  translation_service.py
cmake/: Dependencies.cmake  XenoCommConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile  INTEGRATION_GUIDE.md  PROTOCOL_DEEP_DIVE.md  README.md
docs/api/: emergence_manager.md
docs/audits/: E2-positioning-vs-vanilla-mcp.md  L1-native-transport-rust-vs-cpp-handoff.md  L1-validation-one-pager.md  xenocomm-review-and-action-plan-2026-07-06.md  xenocomm-v2.4.0-external-vetting-prompt.md
docs/guides/: emergence_manager_guide.md
docs/specs/: emergence_manager_spec.md  negotiation_protocol_flow.md
examples/: CMakeLists.txt  README.md  metrics_dashboard.cpp
examples/basic/: CMakeLists.txt  main.cpp
include/xenocomm/core/: adapter_registrar.h  adapter_registry.h  capability_cache.h  capability_index.h  capability_signaler.h  certificate_auth_provider.hpp  compression_algorithms.h  connection_manager.hpp  data_adapters.h  data_transcoder.h  error_correction.h  feedback_integration.h  feedback_loop.h  ggwave_fsk_adapter.h  in_memory_capability_signaler.h  key_manager.h  mock_transport.hpp  negotiation_protocol.h  parameter_fallback.h  secure_transport_wrapper.hpp  security_config.hpp  security_manager.h  strategy_adapter.h  tcp_transport.hpp  token_auth_provider.hpp  transmission_manager.h  transport_protocol.hpp  udp_transport.hpp  version.h
include/xenocomm/extensions/: emergence_manager.hpp  rollback_manager.hpp
include/xenocomm/utils/: logging.hpp  result.h  result.hpp  serialization.h
legacy/: .clang-format
legacy/bindings/python/: CMakeLists.txt
legacy/bindings/python/src/: negotiation_protocol.cpp  type_converters.hpp
legacy/bindings/python/tests/: __init__.py  test_xenocomm.py  valgrind-python.supp
legacy/bindings/python/tests/unit/: test_boundary_gateway.py  test_graphql_adapter.py
legacy/bindings/python/xenocomm/: rate_limiter.py
legacy/cmake/: Packaging.cmake  version.hpp.in
legacy/tests/: CMakeLists.txt  README.md
legacy/tests/integration/system/: basic_communication_test.cpp
legacy/tests/performance/: CMakeLists.txt
legacy/tests/performance/core/: capability_signaler_benchmark.cpp
legacy/tests/unit/core/: CMakeLists.txt  connection_manager_test.cpp  data_adapters_test.cpp  negotiation_protocol_test.cpp  udp_transport_test.cpp
legacy/tests/unit/extensions/: rollback_manager_test.cpp
legacy/tests/unit/extensions/common_ground/: test_context_synchronization.cpp  test_terminology_alignment.cpp
mcp_server/: .env.example  README.md  pyproject.toml  requirements.txt
mcp_server/demo/: README.md  auth.html  coordination_poc.py  dashboard.html  e1_observability_poc.py  index.html  observability.html  run.json  run_e1.json  run_s1.json  s1_auth_poc.py
mcp_server/scripts/: openrouter_smoke.py
mcp_server/tests/: test_adjacent_fixes.py  test_alignment.py  test_datetime_utc.py  test_envfile.py  test_governance.py  test_http_auth.py  test_kfm_tools.py  test_llm_proposer.py  test_observability.py  test_ship_blockers.py
mcp_server/xenocomm_mcp/: __init__.py  __main__.py  alignment.py  analytics.py  claude_bridge.py  cli.py  dashboard.py  demo_observation.py  emergence.py  envfile.py  governance.py  instrumented.py  integrations.py  kfm_lifecycle.py  live_agent_demo.py  llm_proposer.py  negotiation.py  observation.py  orchestrator.py  server.py  workflows.py
openwiki/: .last-update.json  quickstart.md  testing.md
openwiki/architecture/: mcp-server.md
openwiki/legacy/: cpp-sdk.md
openwiki/operations/: runtime-and-config.md
prd/: xenocomm_sdk.md
scripts/: prd.txt  task-complexity-report.json
src/: CMakeLists.txt
src/core/: CMakeLists.txt  adapter_registry.cpp  authentication_manager.cpp  capability_cache.cpp  capability_index.cpp  capability_signaler.cpp  certificate_auth_provider.cpp  compressed_state_adapter.cpp  compression_algorithms.cpp  connection_manager.cpp  data_adapters.cpp  data_transcoder.cpp  error_correction.cpp  feedback_integration.cpp  feedback_loop.cpp  in_memory_capability_signaler.cpp  key_manager.cpp  negotiation_protocol.cpp  parameter_fallback.cpp  secure_transport_wrapper.cpp  security_manager.cpp  strategy_adapter.cpp  tcp_transport.cpp  timeout_negotiation_protocol.cpp  token_auth_provider.cpp  transmission_manager.cpp  udp_transport.cpp
src/extensions/: CMakeLists.txt  boundary_gateway.cpp  common_ground.cpp  compatibility_checker.cpp  emergence_manager.cpp  emergence_manager.hpp  rollback_manager.cpp
src/extensions/common_ground/extensibility/: plugin_loader.cpp  strategy_builder.cpp  strategy_template.cpp
src/extensions/common_ground/metrics/: metric_storage.cpp
src/utils/: CMakeLists.txt  config.cpp  error_handling.cpp  logging.cpp  serialization.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/performance/: CMakeLists.txt
tests/unit/: CMakeLists.txt
(+88 files in other folders)
