[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xenocomm-mcp"
version = "2.4.0"
description = "XenoComm MCP Server - Agent-to-Agent Coordination Protocol for the Agentic AI Ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dave", email = "dave@elementalcollision.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-agents",
    "agent-coordination",
    "protocol-negotiation",
    "xenocomm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications",
]
dependencies = [
    "mcp>=1.20.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "inline-snapshot>=0.5",
    "anyio>=4.0",
]

[project.scripts]
xenocomm-mcp = "xenocomm_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/elementalcollision/xenocomm_sdk"
Documentation = "https://github.com/elementalcollision/xenocomm_sdk/tree/main/mcp_server"
Repository = "https://github.com/elementalcollision/xenocomm_sdk"
Issues = "https://github.com/elementalcollision/xenocomm_sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["xenocomm_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
