[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11[global]>=2.10.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "xenocomm"
version = "0.1.0"
description = "Python bindings for XenoComm SDK"
authors = [
    { name = "ElementalCollision", email = "your.email@example.com" }
]
requires-python = ">=3.7"
readme = "README.md"
license = { text = "MIT" }

[tool.setuptools]
packages = ["xenocomm"]
include-package-data = true

[tool.setuptools.package-data]
xenocomm = ["*.so", "*.pyd", "*.dll"] 